--- a/notebook/01_carla_setup.ipynb
+++ b/notebook/01_carla_setup.ipynb
@@ -29,14 +29,39 @@
             "metadata": {},
             "outputs": [
                 {
-                    "ename": "ModuleNotFoundError",
-                    "evalue": "No module named 'numpy'",
-                    "output_type": "error",
-                    "traceback": [
-                        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-                        "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlogging\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n",
-                        "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Unexpected exception formatting exception. Falling back to standard exception\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Traceback (most recent call last):\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3550, in run_code\n",
+                        "  File \"C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_19164\\2203085658.py\", line 7, in <module>\n",
+                        "    import numpy as np\n",
+                        "ModuleNotFoundError: No module named 'numpy'\n",
+                        "\n",
+                        "During handling of the above exception, another exception occurred:\n",
+                        "\n",
+                        "Traceback (most recent call last):\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\pygments\\styles\\__init__.py\", line 45, in get_style_by_name\n",
+                        "ModuleNotFoundError: No module named 'pygments.styles.default'\n",
+                        "\n",
+                        "During handling of the above exception, another exception occurred:\n",
+                        "\n",
+                        "Traceback (most recent call last):\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2144, in showtraceback\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1063, in format_exception_as_a_whole\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1114, in get_records\n",
+                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\pygments\\styles\\__init__.py\", line 47, in get_style_by_name\n",
+                        "pygments.util.ClassNotFound: Could not find style module 'pygments.styles.default', though it should be builtin.\n"
                     ]
                 }
             ],
