--- a/notebook/01_carla_setup.ipynb
+++ b/notebook/01_carla_setup.ipynb
@@ -25,46 +25,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Unexpected exception formatting exception. Falling back to standard exception\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "Traceback (most recent call last):\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3550, in run_code\n",
-                        "  File \"C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_19164\\2203085658.py\", line 7, in <module>\n",
-                        "    import numpy as np\n",
-                        "ModuleNotFoundError: No module named 'numpy'\n",
-                        "\n",
-                        "During handling of the above exception, another exception occurred:\n",
-                        "\n",
-                        "Traceback (most recent call last):\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\pygments\\styles\\__init__.py\", line 45, in get_style_by_name\n",
-                        "ModuleNotFoundError: No module named 'pygments.styles.default'\n",
-                        "\n",
-                        "During handling of the above exception, another exception occurred:\n",
-                        "\n",
-                        "Traceback (most recent call last):\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2144, in showtraceback\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1063, in format_exception_as_a_whole\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1114, in get_records\n",
-                        "  File \"c:\\git\\automotive\\.venv\\lib\\site-packages\\pygments\\styles\\__init__.py\", line 47, in get_style_by_name\n",
-                        "pygments.util.ClassNotFound: Could not find style module 'pygments.styles.default', though it should be builtin.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 1: 라이브러리 임포트 및 설정\n",
                 "\n",
@@ -104,21 +67,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "CARLA 서버 연결 시도: localhost:2000\n",
-                        "❌ 연결 실패: name 'carla' is not defined\n",
-                        "\n",
-                        "확인 사항:\n",
-                        "1. CARLA 서버가 실행 중인지 확인\n",
-                        "2. CarlaUE4.exe 실행\n",
-                        "3. 방화벽 설정 확인\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 2: CARLA 서버 연결\n",
                 "\n",
@@ -165,15 +114,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ CARLA 서버에 연결되지 않았습니다.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 3: 월드/맵 정보 확인\n",
                 "\n",
@@ -206,15 +147,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ CARLA 서버에 연결되지 않았습니다.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 4: 차량 스폰 테스트\n",
                 "\n",
@@ -255,15 +188,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ 차량이 스폰되지 않았습니다.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 5: 카메라 센서 부착\n",
                 "\n",
@@ -312,15 +237,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ 차량이 스폰되지 않았습니다.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 6: Autopilot 주행 테스트\n",
                 "\n",
@@ -352,16 +269,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ 캡처된 이미지가 없습니다.\n",
-                        "카메라가 정상적으로 부착되었는지 확인하세요.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 7: 캡처된 이미지 표시\n",
                 "\n",
@@ -383,15 +291,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ 저장할 이미지가 없습니다.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 8: 이미지 저장\n",
                 "\n",
@@ -415,15 +315,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "❌ 차량이 스폰되지 않았습니다.\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 9: 차량 상태 정보 확인\n",
                 "\n",
@@ -460,20 +352,7 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "✅ 0개 액터 정리 완료\n",
-                        "\n",
-                        "=== CARLA 설정 테스트 완료 ===\n",
-                        "\n",
-                        "다음 단계:\n",
-                        "1. 02_data_collection.ipynb - 데이터 수집 시작\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# Cell 10: 정리 (액터 삭제)\n",
                 "\n",
@@ -524,7 +403,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -538,7 +417,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.0"
+            "version": "3.12.10"
         }
     },
     "nbformat": 4,
