feat: 자율주행 시나리오 및 복잡성, manual 수정, 긴 프레임으로 센싱 수집

--- a/notebook/03_kitti_exploration.ipynb
+++ b/notebook/03_kitti_exploration.ipynb
@@ -53,9 +53,8 @@
                 "# KITTI 데이터 경로\n",
                 "DATASET_ROOT = PROJECT_ROOT / 'dataset'\n",
                 "KITTI_PATHS = {\n",
-                "    'kitti': DATASET_ROOT / 'kitti',\n",
                 "    'kitti_tracking': DATASET_ROOT / 'kitti_tracking',\n",
-                "    'data_tracking_image_2': DATASET_ROOT / 'data_tracking_image_2'\n",
+                "    # 'kitti_raw': DATASET_ROOT / 'kitti', # 필요시 추가\n",
                 "}\n",
                 "\n",
                 "print(f\"프로젝트 루트: {PROJECT_ROOT}\")\n",
@@ -113,41 +112,19 @@
             "source": [
                 "# Cell 3: 이미지 시퀀스 찾기\n",
                 "\n",
-                "def find_image_sequences(root_path):\n",
-                "    \"\"\"이미지 시퀀스 디렉토리 찾기\"\"\"\n",
-                "    sequences = []\n",
-                "    root = Path(root_path)\n",
-                "    \n",
-                "    if not root.exists():\n",
-                "        return sequences\n",
-                "    \n",
-                "    # 이미지 파일이 있는 디렉토리 찾기\n",
-                "    for img_file in root.rglob('*.png'):\n",
-                "        seq_dir = img_file.parent\n",
-                "        if seq_dir not in sequences:\n",
-                "            # 이 디렉토리에 이미지가 여러 개 있는지 확인\n",
-                "            num_images = len(list(seq_dir.glob('*.png')))\n",
-                "            if num_images > 10:\n",
-                "                sequences.append(seq_dir)\n",
-                "    \n",
-                "    # jpg 이미지도 찾기\n",
-                "    for img_file in root.rglob('*.jpg'):\n",
-                "        seq_dir = img_file.parent\n",
-                "        if seq_dir not in sequences:\n",
-                "            num_images = len(list(seq_dir.glob('*.jpg')))\n",
-                "            if num_images > 10:\n",
-                "                sequences.append(seq_dir)\n",
-                "    \n",
-                "    return sequences\n",
+                "from utils.data_utils import get_kitti_sequences\n",
                 "\n",
                 "# 모든 시퀀스 찾기\n",
                 "all_sequences = []\n",
                 "for name, path in KITTI_PATHS.items():\n",
-                "    seqs = find_image_sequences(path)\n",
+                "    print(f\"검색 경로: {path}\")\n",
+                "    seqs = get_kitti_sequences(str(path))\n",
                 "    all_sequences.extend(seqs)\n",
                 "    print(f\"{name}: {len(seqs)}개 시퀀스 발견\")\n",
                 "\n",
-                "print(f\"\\n총 {len(all_sequences)}개 시퀀스 발견\")"
+                "# 중복 제거\n",
+                "all_sequences = sorted(list(set(all_sequences)))\n",
+                "print(f\"\\n총 {len(all_sequences)}개 고유 시퀀스 발견\")"
             ]
         },
         {
@@ -162,7 +139,8 @@
                 "\n",
                 "for seq_dir in tqdm(all_sequences, desc=\"시퀀스 분석\"):\n",
                 "    # 이미지 파일 찾기\n",
-                "    images = sorted(list(seq_dir.glob('*.png')) + list(seq_dir.glob('*.jpg')))\n",
+                "    seq_path = Path(seq_dir)\n",
+                "    images = sorted(list(seq_path.glob('*.png')) + list(seq_path.glob('*.jpg')))\n",
                 "    \n",
                 "    if len(images) == 0:\n",
                 "        continue\n",
