--- a/notebook/07_evaluation.ipynb
+++ b/notebook/07_evaluation.ipynb
@@ -164,7 +164,7 @@
       "  warnings.warn(\n",
       "c:\\git\\automotive\\.venv312\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
       "  warnings.warn(msg)\n",
-      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_8180\\1752265011.py:56: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_12180\\1752265011.py:56: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(bc_checkpoint_path, map_location=device)\n"
      ]
     },
@@ -357,72 +357,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ CARLAEvaluator 클래스 정의 완료\n"
+      "✅ CARLAEvaluator 클래스 정의 완료 (Fix Applied)\n"
      ]
     }
    ],
    "source": [
-    "# Cell 5: CARLA 평가기 클래스\n",
-    "\n",
     "class CARLAEvaluator:\n",
-    "    \"\"\"\n",
-    "    CARLA 환경에서 모델 평가\n",
-    "    \n",
-    "    참고: CARLA Benchmark (Dosovitskiy et al., 2017)\n",
-    "    \"\"\"\n",
-    "    \n",
     "    def __init__(self, model, shield, transform, device):\n",
-    "        self.model = model\n",
-    "        self.shield = shield\n",
-    "        self.transform = transform\n",
-    "        self.device = device\n",
-    "        \n",
     "        self.client = None\n",
     "        self.world = None\n",
     "        self.vehicle = None\n",
     "        self.camera = None\n",
     "        self.current_image = None\n",
-    "        \n",
+    "        self.device = device\n",
+    "        self.model = model\n",
+    "        self.shield = shield\n",
+    "        self.transform = transform\n",
     "        self.results = EvaluationResults()\n",
-    "    \n",
+    "        \n",
     "    def connect(self, host='localhost', port=2000):\n",
     "        \"\"\"CARLA 서버 연결\"\"\"\n",
-    "        if not CARLA_AVAILABLE:\n",
-    "            logger.warning(\"CARLA를 사용할 수 없습니다.\")\n",
-    "            return False\n",
-    "        \n",
     "        try:\n",
     "            self.client = carla.Client(host, port)\n",
     "            self.client.set_timeout(10.0)\n",
     "            self.world = self.client.get_world()\n",
-    "\n",
-    " # [추가] 동기 모드 설정\n",
+    "            \n",
+    "            # 동기 모드 설정\n",
     "            settings = self.world.get_settings()\n",
     "            settings.synchronous_mode = True\n",
     "            settings.fixed_delta_seconds = 0.05\n",
     "            self.world.apply_settings(settings)\n",
-    "\n",
-    "\n",
-    "            logger.info(f\"CARLA 연결 성공: {self.world.get_map().name}\")\n",
+    "            \n",
+    "            print(f\"✅ CARLA 연결 성공: {self.world.get_map().name}\")\n",
     "            return True\n",
     "        except Exception as e:\n",
-    "            logger.error(f\"CARLA 연결 실패: {e}\")\n",
+    "            print(f\"❌ 연결 실패: {e}\")\n",
     "            return False\n",
-    "    \n",
+    "            \n",
     "    def spawn_vehicle(self):\n",
-    "        \"\"\"차량 스폰\"\"\"\n",
-    "        blueprint_library = self.world.get_blueprint_library()\n",
-    "        vehicle_bp = blueprint_library.find('vehicle.tesla.model3')\n",
+    "        \"\"\"차량 및 센서 스폰\"\"\"\n",
+    "        bp_lib = self.world.get_blueprint_library()\n",
+    "        vehicle_bp = bp_lib.find('vehicle.tesla.model3')\n",
+    "        \n",
     "        spawn_points = self.world.get_map().get_spawn_points()\n",
     "        spawn_point = np.random.choice(spawn_points)\n",
+    "        spawn_point.location.z += 2.0\n",
     "        \n",
     "        self.vehicle = self.world.spawn_actor(vehicle_bp, spawn_point)\n",
-    "        return self.vehicle\n",
-    "    \n",
-    "    def setup_camera(self):\n",
-    "        \"\"\"카메라 설정\"\"\"\n",
-    "        blueprint_library = self.world.get_blueprint_library()\n",
-    "        camera_bp = blueprint_library.find('sensor.camera.rgb')\n",
+    "        \n",
+    "        # 카메라 설정\n",
+    "        camera_bp = bp_lib.find('sensor.camera.rgb')\n",
     "        camera_bp.set_attribute('image_size_x', '800')\n",
     "        camera_bp.set_attribute('image_size_y', '600')\n",
     "        camera_bp.set_attribute('fov', '100')\n",
@@ -433,19 +417,25 @@
     "        )\n",
     "        \n",
     "        self.camera = self.world.spawn_actor(\n",
-    "            camera_bp, camera_transform, attach_to=self.vehicle\n",
+    "            camera_bp, \n",
+    "            camera_transform, \n",
+    "            attach_to=self.vehicle\n",
     "        )\n",
     "        self.camera.listen(self._process_image)\n",
-    "    \n",
+    "        \n",
+    "        # 차량 안정화 대기\n",
+    "        for _ in range(20):\n",
+    "            self.world.tick()\n",
+    "            \n",
+    "        print(f\"✅ 차량 스폰 완료: {spawn_point.location}\")\n",
+    "        \n",
     "    def _process_image(self, image):\n",
-    "        \"\"\"카메라 이미지 콜백\"\"\"\n",
-    "        # Thread-safe 이미지 처리 (복사본 생성)\n",
-    "        array = np.array(image.raw_data, dtype=np.uint8).copy()\n",
+    "        array = np.frombuffer(image.raw_data, dtype=np.uint8)\n",
     "        array = array.reshape((image.height, image.width, 4))\n",
-    "        self.current_image = array[:, :, :3][:, :, ::-1]  # BGRA -> RGB\n",
-    "    \n",
-    "    def get_vehicle_state(self) -> VehicleState:\n",
-    "        \"\"\"차량 상태 수집\"\"\"\n",
+    "        self.current_image = array[:, :, :3][:, :, ::-1] # BGR to RGB\n",
+    "        \n",
+    "    def get_vehicle_state(self):\n",
+    "        \"\"\"차량 상태 정보 수집\"\"\"\n",
     "        velocity = self.vehicle.get_velocity()\n",
     "        speed = np.sqrt(velocity.x**2 + velocity.y**2 + velocity.z**2)\n",
     "        \n",
@@ -477,10 +467,16 @@
     "            action_tensor = self.model(image_tensor)\n",
     "            action_np = action_tensor.cpu().numpy()[0]\n",
     "        \n",
+    "        # 액션 값 보정 (FIXED)\n",
+    "        # 1. Throttle Boosting: 정지 마찰력을 이기기 위해 2배 증폭\n",
+    "        boosted_throttle = min(float(action_np[1]) * 2.0, 1.0)\n",
+    "        # 2. Brake Thresholding: 0.1 미만 노이즈 제거\n",
+    "        clean_brake = float(action_np[2]) if float(action_np[2]) >= 0.1 else 0.0\n",
+    "        \n",
     "        policy_action = Action(\n",
     "            steer=float(action_np[0]),\n",
-    "            throttle=float(action_np[1]),\n",
-    "            brake=float(action_np[2])\n",
+    "            throttle=boosted_throttle,\n",
+    "            brake=clean_brake\n",
     "        )\n",
     "        \n",
     "        # Shield 적용\n",
@@ -497,9 +493,6 @@
     "        speeds = []\n",
     "        \n",
     "        for frame in range(max_frames):\n",
-    "            # self.world.tick(5.0) # wait_for_tick() 대신 tick() 사용 (타임아웃은 내부 처리됨) 또는\n",
-    "            # self.world.wait_for_tick() # 으로 변경해도 됨. \n",
-    "            # 추천:\n",
     "            self.world.tick()\n",
     "            \n",
     "            if self.current_image is None:\n",
@@ -518,6 +511,7 @@
     "                throttle=action.throttle,\n",
     "                brake=action.brake\n",
     "            )\n",
+    "            control.manual_gear_shift = False\n",
     "            self.vehicle.apply_control(control)\n",
     "            \n",
     "            metrics.total_frames += 1\n",
@@ -539,7 +533,7 @@
     "        if self.vehicle:\n",
     "            self.vehicle.destroy()\n",
     "\n",
-    "print(\"✅ CARLAEvaluator 클래스 정의 완료\")"
+    "print(\"✅ CARLAEvaluator 클래스 정의 완료 (Fix Applied)\")"
    ]
   },
   {
@@ -557,7 +551,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef7004ee5d9140c4a167d807133c2875",
+       "model_id": "50febf0d18e24fd5ada3e141320f963d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -790,64 +784,22 @@
      "text": [
       "==================================================\n",
       "CARLA 온라인 평가\n",
-      "==================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-15 01:10:58,395 - INFO - CARLA 연결 성공: Carla/Maps/Town10HD_Opt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "==================================================\n",
+      "✅ CARLA 연결 성공: Carla/Maps/Town10HD_Opt\n",
       "\n",
       "에피소드 1/5\n",
-      "  - 평균 속도: 0.1 km/h\n",
-      "  - Shield 개입: 0회\n",
-      "\n",
-      "에피소드 2/5\n",
-      "  - 평균 속도: 0.1 km/h\n",
-      "  - Shield 개입: 0회\n",
-      "\n",
-      "에피소드 3/5\n",
-      "  - 평균 속도: 0.1 km/h\n",
-      "  - Shield 개입: 0회\n",
-      "\n",
-      "에피소드 4/5\n",
-      "  - 평균 속도: 0.1 km/h\n",
-      "  - Shield 개입: 0회\n",
-      "\n",
-      "에피소드 5/5\n"
+      "✅ 차량 스폰 완료: Location(x=-76.666107, y=24.471010, z=2.600000)\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-15 01:12:08,766 - INFO - 동기 모드 해제 완료\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  - 평균 속도: 0.1 km/h\n",
-      "  - Shield 개입: 323회\n",
-      "\n",
-      "=== 평가 결과 요약 ===\n",
-      "  num_episodes: 5\n",
-      "  success_rate: 1.0000\n",
-      "  avg_collisions: 0.0000\n",
-      "  collision_rate: 0.0000\n",
-      "  avg_lane_invasions: 0.0000\n",
-      "  traffic_light_compliance: 1.0000\n",
-      "  avg_speed_kmh: 0.1031\n",
-      "  avg_distance_m: 0.0000\n",
-      "  avg_shield_interventions: 64.6000\n"
+     "ename": "AttributeError",
+     "evalue": "'CARLAEvaluator' object has no attribute 'setup_camera'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m에피소드 \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mep\u001b[38;5;250m \u001b[39m+\u001b[38;5;250m \u001b[39m\u001b[32m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mNUM_EPISODES\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m evaluator.spawn_vehicle()\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[43mevaluator\u001b[49m\u001b[43m.\u001b[49m\u001b[43msetup_camera\u001b[49m()\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     20\u001b[39m     metrics = evaluator.run_episode(max_frames=\u001b[32m500\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'CARLAEvaluator' object has no attribute 'setup_camera'"
      ]
     }
    ],
@@ -899,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
